tests/rosetta/transpiler/rb/chernicks-carmichael-numbers.error
run: exit status 1
/workspace/mochi/tests/rosetta/transpiler/rb/chernicks-carmichael-numbers.rb: --> /workspace/mochi/tests/rosetta/transpiler/rb/chernicks-carmichael-numbers.rb
Unmatched `end', missing keyword (`do', `def`, `if`, etc.) ?
   46  start = _now()
>  47    def isPrime(n)
>  57      d = 5
>  68      return true
>  69    end
>  70    def bigTrim(a)
>  71      n = a.length
>  76      return a
>  77    end
>  78    def bigFromInt(x)
>  82      digits = []
>  83      n = x
>  88      return digits
>  89    end
>  90    def bigMulSmall(a, m)
>  94      res = []
>  95      carry = 0
>  96      i = 0
> 107      return bigTrim(res)
> 108    end
> 109    def bigToString(a)
> 110      s = ""
> 111      i = a.length - 1
> 116      return s
> 117    end
> 118    def pow2(k)
> 119      r = 1
> 120      i = 0
> 125      return r
> 126    end
> 127    def ccFactors(n, m)
> 128      p = _add(6 * m, 1)
> 132      prod = bigFromInt(p)
> 133      p = _add(12 * m, 1)
> 137      prod = bigMulSmall(prod, p)
> 138      i = 1
> 147      return prod
> 148    end
> 149    def ccNumbers(start, end)
> 170    end
  172  end_time = _now()
/workspace/mochi/tests/rosetta/transpiler/rb/chernicks-carmichael-numbers.rb:149: syntax error, unexpected `end' (SyntaxError)
  def ccNumbers(start, end)
                       ^~~

